[package]
name = "machine_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.5", features = ["rand"] }
mnist = "0.6.0"
plotters = "0.3.5"
indicatif = "0.17.8"
rayon = "1.10.0"
rand_distr = "0.4.3"
rand = "0.8.5"
itertools = "0.13.0"
